feat: implementar Supabase como vectorstore para o bot RAG
- Substituir ChromaDB por Supabase vectorstore
- Atualizar bot.py e load.py para usar Supabase diretamente
- Adicionar documentação para configuração do vectorstore no Supabase
- Atualizar arquivos de configuração e dependências
- Remover arquivos MCP desnecessários
- Simplificar implementação mantendo funcionalidades principais

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ OPENAI_API_KEY=your_openai_api_key_here
 OPENROUTER_API_KEY=your_openrouter_api_key_here
 OPENROUTER_MODEL=minimax/minimax-m2:free
 #OPENROUTER_MODEL_FALLBACK=anthropic/claude-3-haiku
+
+# Supabase Configuration
+SUPABASE_URL=your_supabase_project_url_here
+SUPABASE_API_KEY=your_supabase_anon_key_here
+
+# Supabase MCP (Model Context Protocol) Configuration (opcional)
+# SUPABASE_MCP_URL=https://mcp.supabase.com/mcp
+# SUPABASE_PROJECT_REF=your_supabase_project_reference_here
